# xontrib-whole-word-jumping

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
tests/: test_xontrib.py
xontrib/: whole_word_jumping.py
