
[project]
name = "xontrib-whole-word-jumping"
version = "0.0.1"
license = {file = "LICENSE"}
description = "Jump/delete across whole (non-whitespace) words with Ctrl+Left/Right/Delete/Backspace."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
]
requires-python = ">=3.8"
dependencies = ["xonsh>=0.12.5", "prompt_toolkit>=3.0.29"]
authors = [
    { name = "xontrib-whole-word-jumping", email = "no@no.no" },
]
[project.readme]
file = "README.md"
content-type = "text/markdown"





[project.urls]

Homepage = "https://github.com/xonsh/xontrib-whole-word-jumping"
Documentation = "https://github.com/xonsh/xontrib-whole-word-jumping/blob/master/README.md"
Code = "https://github.com/xonsh/xontrib-whole-word-jumping"
"Issue tracker" = "https://github.com/xonsh/xontrib-whole-word-jumping/issues"




[project.optional-dependencies]
dev = ["pytest>=7.0"]



[build-system]
requires = [
    "setuptools>=62",
    "wheel",               # for bdist package distribution
]
build-backend = "setuptools.build_meta"
[tool.setuptools]
    
packages = ["xontrib"]
package-dir = {xontrib = "xontrib"}
    
platforms = ["any"]
include-package-data = false
[tool.setuptools.package-data]
    
xontrib = ["*.xsh"]
    


[tool.isort]
profile = "black"

[tool.black]
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.vscode
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | disk-cache.sqlite3
)/
'''
